--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,13 +25,18 @@ dependencies:
     sdk: flutter
 
 
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.0
   firebase_core: ^0.5.0
   cloud_firestore: ^0.14.1+2
   firebase_auth: ^0.18.1+1
-  page_transition: ^1.1.6
+  page_transition: ^1.1.7+2
   google_sign_in: ^4.5.4
   giffy_dialog: ^1.8.0
+  tflite: ^1.1.1
+  image_picker: ^0.6.7+11
+  camera: ^0.5.8+7
+  percent_indicator: ^2.1.1+1
+  flutter_spinkit: ^4.1.2+1
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +48,8 @@ flutter:
 
   assets:
      - images/
+     - assets/model_unquant.tflite
+     - assets/labels.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
