--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   camera: ^0.5.8+7
   percent_indicator: ^2.1.1+1
   flutter_spinkit: ^4.1.2+1
+  curved_navigation_bar: ^0.3.4
+  firebase_database: ^4.1.0
 
 dev_dependencies:
   flutter_test:
