--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   curved_navigation_bar: ^0.3.4
   firebase_database: ^4.1.0
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
